src/objects/Project_Event__c.object
<CustomObject>
    <fields>
        <fullName>Confirmed_End_Date__c</fullName>
        <label>Confirmed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_Start_Date__c</fullName>
        <label>Confirmed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Hours__c</fullName>
        <label>Event Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participant_Hours__c</fullName>
        <label>Participant Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preparation_Hours__c</fullName>
        <label>Prep Hours</label>
        <summarizedField>Project_Preparation__c.Hours__c</summarizedField>
        <summaryForeignKey>Project_Preparation__c.Project_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Events</relationshipLabel>
        <relationshipName>Project_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Tentative</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Ordered_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>Confirmed_Start_Date__c &gt; Confirmed_End_Date__c</errorConditionFormula>
        <errorMessage>The Confirmed End date cannot be before the Confirmed Start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Events_Confirmed_With_Dates</fullName>
        <active>true</active>
        <description>If confirmed, make sure there are confirmed dates specified</description>
        <errorConditionFormula>AND(
   TEXT(Status__c) = &quot;Confirmed&quot;,
   OR(
      ISNULL(Confirmed_Start_Date__c),
      ISNULL(Confirmed_End_Date__c)
     )
   )</errorConditionFormula>
        <errorMessage>A confirmed event must have valid Start and End dates</errorMessage>
    </validationRules>
</CustomObject>